Added first new blog post, styled posts, arranged urls

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,7 @@ exclude:
   - "bower_components/"
 sass:
   style: compressed
+collections:
+  posts:
+    output: true
+    permalink: /log/:categories/:title/
